--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="viewset.com.redpointrecyclerview">
+    package="viewset.com">
 
     <application
         android:allowBackup="true"
@@ -7,9 +7,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
-            android:name=".DecorationActivity"
+            android:name="viewset.com.MainActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,5 +17,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".redpointrecyclerview.DecorationActivity"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".tagrecyclerview.TagActivity"
+            android:screenOrientation="portrait" />
     </application>
 </manifest>
