--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,6 @@
 
         <activity
             android:name=".imagerecyclerview.LayoutManagerImageActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="sensor" />
     </application>
 </manifest>
